Swagger for MenuItems
